--- a/studio1/style.css
+++ b/studio1/style.css
@@ -1,87 +1,94 @@
 @charset "UTF-8";
-
 body {
-	margin: 0;
-	padding: 0;
-  font-family: verdana;
-  color: #262f38;
+    margin: 0;
+    padding: 0;
+    font-family: verdana;
+    color: #262f38;
 }
 
 header {
-  display: block;
-  width: 800px;
-  height: 250px;
+display: block;
+
 }
 
 a {
-  color: #000;
+    color: #000;
 }
 
 a:hover {
-  color: #81ecf6;
+    color: #81ecf6;
 }
 
-img.logo {
-    display: block;
-    padding-top: 40px;
-    margin: 0 auto;
-  }
+aside {
+    margin-left: 10px;
+    margin-top: 10px;
+    float: left;
+}
 
-section {
-  width: 800px;
-  margin: 0 auto;
+main {
+    clear: both;
+    margin-left: 200px;
+    margin-top: 40px;
+}
+
+h1 {
+    font-size: 24px;
+    text-align: center;
+    background-color: #c3eef2;
+    padding: 10px;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2 {
-  font-size: 20px;
-  margin-left: 30px;
+    font-size: 20px;
+    margin-left: 30px;
 }
 
 nav {
-  display: block;
-  font-size: 12px;
-  margin: 10px;
-  line-height: 26px;
+    display: block;
+    font-size: 12px;
+    margin: 10px;
+    line-height: 26px;
 }
 
-footer{
-	padding-top: 20px;
-	padding-bottom: 20px;
-  clear: left;
-  width: 265px;
-  margin: 0 auto;
+footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    clear: left;
+    margin-left: 670px;
 }
-
 
 #left-column {
-  float: left;
-  background: #bccad4;
-  width: 220px;
-  height: 250px;
-  margin: 20px;
-  padding-bottom: 10px;
-  padding-top: 5px;
-  border-radius: 20px;
+    float: left;
+    background: #d2ede3;
+    width: 220px;
+    height: 250px;
+    margin: 20px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    border-radius: 20px;
 }
 
 #middle-column {
-  float: left;
-  background: #bccad4;
-  width: 220px;
-  height: 250px;
-  margin: 20px;
-  padding-bottom: 10px;
-  padding-top: 5px;
-  border-radius: 20px;
+    float: left;
+    background: #d2ede3;
+    width: 220px;
+    height: 250px;
+    margin: 20px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    border-radius: 20px;
 }
 
 #right-column {
-  float: left;
-  background: #bccad4;
-  width: 220px;
-  height: 250px;
-  margin: 20px;
-  padding-bottom: 10px;
-  padding-top: 5px;
-  border-radius: 20px;
+    float: left;
+    background: #d2ede3;
+    width: 220px;
+    height: 250px;
+    margin: 20px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    border-radius: 20px;
 }
