--- a/studio1/style.css
+++ b/studio1/style.css
@@ -8,7 +8,9 @@ body {
 
 header {
 display: block;
-
+margin-left: 10px;
+margin-top: 10px;
+float: left;
 }
 
 a {
@@ -27,7 +29,7 @@ aside {
 
 main {
     clear: both;
-    margin-left: 200px;
+    margin-left: 220px;
     margin-top: 40px;
 }
 
@@ -57,15 +59,15 @@ footer {
     padding-top: 20px;
     padding-bottom: 20px;
     clear: left;
-    margin-left: 670px;
+    margin-left: 730px;
 }
 
 #left-column {
     float: left;
     background: #d2ede3;
-    width: 220px;
+    width: 250px;
     height: 250px;
-    margin: 20px;
+    margin: 10px;
     padding-bottom: 10px;
     padding-top: 5px;
     border-radius: 20px;
@@ -74,9 +76,9 @@ footer {
 #middle-column {
     float: left;
     background: #d2ede3;
-    width: 220px;
+    width: 250px;
     height: 250px;
-    margin: 20px;
+    margin: 10px;
     padding-bottom: 10px;
     padding-top: 5px;
     border-radius: 20px;
@@ -85,9 +87,9 @@ footer {
 #right-column {
     float: left;
     background: #d2ede3;
-    width: 220px;
+    width: 250px;
     height: 250px;
-    margin: 20px;
+    margin: 10px;
     padding-bottom: 10px;
     padding-top: 5px;
     border-radius: 20px;
