--- a/studio2/style.css
+++ b/studio2/style.css
@@ -2,9 +2,103 @@
 
 /* CSS Document */
 
+
 /* start all css with a reset */
 
 * {
     margin: 0px;
     padding: 0px
+}
+
+body {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+a {
+    color: #3b56a6;
+}
+
+#man {
+    float: left;
+    margin-bottom: -6px;
+    margin-right:20px;
+}
+
+h1 {
+    color: #3b56a6;
+    font-size: 46px;
+}
+
+h2 {
+    color: #73cee6;
+    font-size: 28px;
+    padding-bottom: 10px;
+}
+
+article {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.field {
+    margin-bottom: 10px;
+}
+
+.question {
+    font-weight: bold;
+    color: #654a69;
+}
+
+input[type=text] {
+    padding: 5px;
+    margin-left: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid #bcbcbc;
+}
+
+input[type=submit] {
+    margin-top: 10px;
+    border-radius: 5px;
+    border-bottom: 2px solid #407023;
+    border-right: 2px solid #407023;
+    border-top: 0px;
+    border-left: 0px;
+    width: 80px;
+    height: 40px;
+    background: #6fc93a;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 13px;
+    color: #2c4c19;
+}
+
+input[type=reset] {
+    margin-top: 10px;
+    border-radius: 5px;
+    border-bottom: 2px solid #acb748;
+    border-right: 2px solid #acb748;
+    border-top: 0px;
+    border-left: 0px;
+    width: 80px;
+    height: 40px;
+    background: #ede25a;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 13px;
+    color: #727a2a;
+}
+
+#message {
+    clear: both;
+    background-color: #a1d8e5;
+    color: #243a72;
+    width: 820px;
+    border-top: 14px solid #3b56a6;
+    padding: 30px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+footer {
+    margin-top: 30px;
+    margin-left: 250px;
 }
