--- a/studio5/style.css
+++ b/studio5/style.css
@@ -10,15 +10,16 @@
 }
 
 body {
-  font-family: sans-serif;
-  font-size: 11px;
   background-color: #c1f7d0;
+  font-size: 16px;
+  font-family: 'Hammersmith One', sans-serif;
 }
 
 header{
   width: 900px;
   margin-left: auto;
   margin-right: auto;
+  margin-top:20px;
 }
 
 #content {
@@ -36,6 +37,7 @@ header{
   border: 0px solid #666;
   width: 200px;
   height: 226px;
+  margin-bottom: 40px
 }
 
 .gridBox:hover {
@@ -49,22 +51,24 @@ header{
   cursor: auto;
 }
 
-a:link, a:visited {
-	color: #39f;
-	text-decoration: none;
+a {
+  color: #5585b7;
+  border: 2px solid transparent;
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+    color: #f9bd5f;
 }
 
-h1, h2 {
-
+a:active {
+  color: #e6f95f;
 }
 
-h1 em {
-	font-weight: 200;
-	font-style: normal;
+
+h1{
+  text-align: center;
+  font-size: 20px;
 }
 
 h2 {
@@ -73,6 +77,11 @@ h2 {
 	padding-bottom: 0.8em;
 }
 
-h1:before {
-	content:"SOUNDJS ";
+footer {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 900px;
 }
