--- a/project/process/style.css
+++ b/project/process/style.css
@@ -81,6 +81,12 @@ article {
     line-height: 20px;
 }
 
+img.main{
+  border: 1px solid #7e7e7e;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
 footer {
     padding-top: 20px;
     padding-bottom: 20px;
