--- a/project/process/proto3/style.css
+++ b/project/process/proto3/style.css
@@ -6,15 +6,16 @@ body {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: verdana;
+font-family: 'Open Sans', sans-serif;
   font-size: 14px;
+  color: #4b52a3;
 }
 
 header {
   background: #92eaea;
   margin-top: 0px;
   width: 100%;
-  height: 240px;
+  height: 220px;
 }
 
 img.header {
@@ -49,17 +50,21 @@ h1 {
 }
 
 h2 {
+  font-family: 'Inconsolata', monospace;
   font-size: 20px;
   margin-left: 0px;
   float: left;
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 h3{
-  margin-top: -10px;
-color: #4a7135;
+  margin-top: -13px;
+  margin-left: 28px;
+  color: #4a7135;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 20px;
 }
-
 
 #navbg{
   background-color: #f5ef91;
@@ -68,10 +73,12 @@ color: #4a7135;
 }
 
 nav.main {
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
-  width: 977.5px;
+  width: 860px;
   font-size: 16px;
 }
 
@@ -91,7 +98,7 @@ li a {
   display: block;
   color: #35817f;
   text-align: center;
-  padding: 16px 33px;
+  padding: 14px 26px;
   text-decoration: none;
 }
 
@@ -110,7 +117,7 @@ footer {
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
-  background-color: #000;
+  background-color: #388482;
   color: #fff;
   width: 100%;
   clear: both;
@@ -124,12 +131,12 @@ footer {
   padding: 20px;
   width: 824px;
   height: 423px;
-  margin-top: 70px;
+  margin-top: 40px;
 }
 
 ul.symcheck {
   list-style-type: none;
-  margin-top: -3px;
+  margin-top: -12px;
     margin-left: -20px;
     width: 824px;
   padding: 0;
@@ -140,6 +147,7 @@ ul.symcheck {
 
 .alien{
   margin-top: 20px;
+  margin-left:30px;
 }
 
 nav.symcheck {
@@ -150,20 +158,20 @@ nav.symcheck {
 li.symcheck {
   color: #ffffff;
   float: left;
-  padding: 14px 30px;
+  padding: 14px 79px;
 }
 
 p.about {
   clear: both;
-  padding: 20px;
+  padding: 24px;
   border-radius: 20px;
-  border: 1px solid black;
-  width: 800px;
-  height: 300px;
+background-color: rgba(255,255,255,0.7);
+  width: 777px;
+  line-height: 24px;
 }
 
 #navline{
   background-color:#388482;
   width: 100%;
-  height: 5px
+  height: 2px
 }
