--- a/project/process/proto3/style.css
+++ b/project/process/proto3/style.css
@@ -1,177 +1,264 @@
 body {
-  background: #33e2de;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #4b52a3;
+    background: #33e2de;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #4b52a3;
 }
 
 header {
-  background: #92eaea;
-  margin-top: 0px;
-  width: 100%;
-  height: 220px;
+    background: #92eaea;
+    margin-top: 0px;
+    width: 100%;
+    height: 220px;
 }
 
 img.header {
     display: block;
     padding-top: 20px;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto
+}
 
 a {
-  color: #fff;
+    color: #de4526;
 }
 
 a:hover {}
 
 aside {
-  margin-left: 10px;
-  margin-top: 10px;
-  float: left;
+    margin-left: 10px;
+    margin-top: 10px;
+    float: left;
 }
 
 main {
-  margin-left: auto;
-  margin-right: auto;
-  width: 824px;
-  clear: both;
+    margin-left: auto;
+    margin-right: auto;
+    width: 824px;
+    clear: both;
 }
 
 h1 {
-  font-size: 30px;
-  text-align: center;
-  margin: 40px;
+    font-size: 30px;
+    text-align: center;
+    margin: 40px;
 }
 
 h2 {
-  font-family: 'Inconsolata', monospace;
-  font-size: 20px;
-  margin-left: 0px;
-  float: left;
-    margin-top: 20px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 30px;
+    margin-left: 0px;
+    float: left;
+    margin-top: 40px;
 }
 
-h3{
-  margin-top: -13px;
-  margin-left: 28px;
-  color: #4a7135;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 20px;
+h3 {
+    margin-top: -13px;
+    margin-left: 28px;
+    color: #4a7135;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 20px;
 }
 
-#navbg{
-  background-color: #f5ef91;
-  width: 100%;
-  margin: auto;
+h4 {
+    margin-top: 0px;
+    font-size: 18px;
+}
+
+h5 {
+    margin-top: -10px;
+    font-style: italic;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+h6 {
+    margin-top: 0px;
+    font-size: 16px;
+}
+
+#navbg {
+    background-color: #f5ef91;
+    width: 100%;
+    margin: auto;
 }
 
 nav.main {
     font-family: 'Inconsolata', monospace;
     font-weight: bold;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 860px;
-  font-size: 16px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 860px;
+    font-size: 16px;
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #f5ef91;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #f5ef91;
 }
 
 li {
-  float: left;
+    float: left;
 }
 
 li a {
-  display: block;
-  color: #35817f;
-  text-align: center;
-  padding: 14px 26px;
-  text-decoration: none;
+    display: block;
+    color: #35817f;
+    text-align: center;
+    padding: 14px 26px;
+    text-decoration: none;
 }
 
 li a:hover {
-  background-color: #efd272;
-  color: #fff;
+    background-color: #efd272;
+    color: #fff;
+}
+
+.currenttab {
+    background-color: #efd272;
+    color: #fff;
 }
 
 footer {
-  margin-top: 30px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
-  text-align: center;
-  background-color: #388482;
-  color: #fff;
-  width: 100%;
-  clear: both;
-  border: 0;
+    margin-top: 30px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
+    background-color: #388482;
+    color: #fff;
+    width: 100%;
+    clear: both;
+    border: 0;
+}
+
+footer a {
+    color: #fff;
 }
 
 #checker {
-  clear: both;
-  background-image: url('images/folder.png');
-  background-repeat: no-repeat;
-  padding: 20px;
-  width: 824px;
-  height: 423px;
-  margin-top: 40px;
+    clear: both;
+    background-image: url('images/folder.png');
+    background-repeat: no-repeat;
+    padding: 20px;
+    width: 824px;
+    height: 423px;
+    margin-top: 40px;
 }
 
 ul.symcheck {
-  list-style-type: none;
-  margin-top: -12px;
+    list-style-type: none;
+    margin-top: -12px;
     margin-left: -20px;
     width: 824px;
-  padding: 0;
-  overflow: hidden;
-  background-color: #8bc85f;
-  border-top-right-radius: 18px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #8bc85f;
+    border-top-right-radius: 18px;
 }
 
-.alien{
-  margin-top: 20px;
-  margin-left:30px;
+#alien {
+    position: relative;
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
 nav.symcheck {
-  font-size: 14px;
-  margin: 0px;
+    font-size: 14px;
+    margin: 0px;
 }
 
 li.symcheck {
-  color: #ffffff;
-  float: left;
-  padding: 14px 79px;
+    color: #ffffff;
+    float: left;
+    padding: 14px 84px;
 }
 
-p.about {
-  clear: both;
-  padding: 24px;
-  border-radius: 20px;
-background-color: rgba(255,255,255,0.7);
-  width: 777px;
-  line-height: 24px;
+li.symcheck1 {
+    color: #ffffff;
+    float: left;
+    padding: 14px 160px;
 }
 
-#navline{
-  background-color:#388482;
-  width: 100%;
-  height: 2px
+.text {
+    clear: both;
+    padding: 24px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 777px;
+    line-height: 24px;
 }
+
+#navline {
+    background-color: #388482;
+    width: 100%;
+    height: 2px
+}
+
+#alienhead {
+    position: absolute;
+    left: 58px;
+    top: 0px;
+}
+
+#alienbody {
+    position: absolute;
+    left: 0px;
+    top: 55px;
+}
+
+aside.alien {
+    color: #fff;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    left: 200px;
+    width: 500px;
+    height: 280px;
+    border-radius: 20px;
+    background-color: #8bc85f;
+    display: none;
+}
+
+aside {
+    color: #8bc85f;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    left: 200px;
+    width: 500px;
+    height: 280px;
+    border-radius: 20px;
+    border: 1px solid #8bc85f;
+}
+
+aside p {
+    position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
+    top: 90px;
+    text-align: center;
+}
+
+aside.alien p {
+    position: relative;
+    top: 100px;
+    text-align: center;
+}
+
+aside #close, #close1, #close2, #close3, #close4 {}
