--- a/project/final/issue2/style.css
+++ b/project/final/issue2/style.css
@@ -1,104 +1,421 @@
-@charset "UTF-8";
-
-/* CSS Document */
-
-
-/* start all css with a reset */
-
-* {
-    margin: 0px;
-    padding: 0px
+body {
+    background: #33e2de;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #4b52a3;
 }
 
-body {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+header {
+    background: #92eaea;
+    margin-top: 0px;
+    width: 100%;
+    height: 60px;
+}
+
+img.header {
+    display: block;
+    padding-top: 10px;
+    margin-left: auto;
+    margin-right: auto
 }
 
 a {
-    color: #3b56a6;
+    color: #de4526;
 }
 
-#man {
+a:hover {}
+
+aside {
+    margin-left: 10px;
+    margin-top: 10px;
     float: left;
-    margin-right:20px;
-    margin-top: 50px;
-    margin-bottom: -6px
+}
+
+main {
+    margin-left: auto;
+    margin-right: auto;
+    width: 824px;
+    clear: both;
 }
 
 h1 {
-    color: #3b56a6;
-    font-size: 46px;
+    font-size: 30px;
+    text-align: center;
+    margin: 40px;
 }
 
 h2 {
-    color: #73cee6;
-    font-size: 28px;
-    padding-bottom: 10px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 30px;
+    margin-left: 0px;
+    float: left;
+    margin-top: 40px;
 }
 
-article {
-    font-size: 14px;
-    line-height: 24px;
-}
-
-.field {
-    margin-bottom: 10px;
+h2.home {
+    font-family: 'Inconsolata', monospace;
+    font-size: 30px;
+    margin-left: 0px;
+    float: left;
+    margin-top: 0px;
 }
 
 h3 {
-    color: #654a69;
+    margin-top: -13px;
+    margin-left: 28px;
+    color: #4a7135;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+h4 {
+    margin-top: 0px;
+    font-size: 18px;
+}
+
+h5 {
+    margin-top: -10px;
+    font-style: italic;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+h6 {
+    margin-top: 0px;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+#navbg {
+    background-color: #f5ef91;
+    width: 100%;
+    margin: auto;
+}
+
+nav.main {
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 860px;
     font-size: 16px;
 }
 
-input[type=text] {
-    padding: 5px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #bcbcbc;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #f5ef91;
 }
 
-input[type=submit] {
-    margin-top: 10px;
-    border-radius: 5px;
-    border-bottom: 2px solid #407023;
-    border-right: 2px solid #407023;
-    border-top: 0px;
-    border-left: 0px;
-    width: 80px;
-    height: 40px;
-    background: #6fc93a;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 13px;
-    color: #2c4c19;
+li {
+    float: left;
 }
 
-input[type=reset] {
-    margin-top: 10px;
-    border-radius: 5px;
-    border-bottom: 2px solid #acb748;
-    border-right: 2px solid #acb748;
-    border-top: 0px;
-    border-left: 0px;
-    width: 80px;
-    height: 40px;
-    background: #ede25a;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 13px;
-    color: #727a2a;
+li a {
+    display: block;
+    color: #35817f;
+    text-align: center;
+    padding: 14px 28px;
+    text-decoration: none;
 }
 
-#message {
-    clear: both;
-    background-color: #a1d8e5;
-    color: #243a72;
-    width: 820px;
-    border-top: 14px solid #3b56a6;
-    padding: 30px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+li a.home {
+    display: block;
+    color: #35817f;
+    text-align: center;
+    padding: 14px 35.5px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #efd272;
+    color: #fff;
+}
+
+.currenttab {
+    background-color: #efd272;
+    color: #fff;
 }
 
 footer {
-    margin-top: 30px;
-    margin-left: 420px;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top: 24px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
+    background-color: #388482;
+    color: #fff;
+    width: 100%;
+    clear: both;
+    border: 0;
+}
+
+footer a {
+    color: #fff;
+}
+
+.smallfont {
+    font-size: 10px;
+}
+
+#checker {
+    clear: both;
+    background-image: url('images/folder.png');
+    background-repeat: no-repeat;
+    padding: 20px;
+    width: 824px;
+    height: 423px;
+    margin-top: 40px;
+}
+
+ul.symcheck {
+    list-style-type: none;
+    margin-top: -12px;
+    margin-left: -20px;
+    width: 824px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #8bc85f;
+    border-top-right-radius: 18px;
+}
+
+#alien {
+    position: relative;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+nav.symcheck {
+    font-size: 14px;
+    margin: 0px;
+}
+
+li.symcheck {
+    color: #ffffff;
+    float: left;
+    padding: 14px 84px;
+}
+
+li.symcheck1 {
+    color: #ffffff;
+    float: left;
+    padding: 14px 160px;
+}
+
+li.symcheck2 {
+    color: #ffffff;
+    float: left;
+    padding: 9px 30px 0px 30px;
+}
+
+.text {
+    clear: both;
+    padding: 24px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 777px;
+    line-height: 24px;
+}
+
+#navline {
+    background-color: #388482;
+    width: 100%;
+    height: 2px;
+    margin-top:8px;
+}
+
+#alienhead {
+    position: absolute;
+    left: 58px;
+    top: 0px;
+}
+
+#alienbody {
+    position: absolute;
+    left: 0px;
+    top: 55px;
+}
+
+aside.alien {
+    color: #fff;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    left: 200px;
+    width: 500px;
+    height: 280px;
+    border-radius: 20px;
+    background-color: #8bc85f;
+    display: none;
+}
+
+aside {
+    color: #8bc85f;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    left: 200px;
+    width: 500px;
+    height: 280px;
+    border-radius: 20px;
+    border: 1px solid #8bc85f;
+}
+
+aside p {
+    position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
+    top: 90px;
+    text-align: center;
+}
+
+aside.alien p {
+    position: relative;
+    top: 100px;
+    text-align: center;
+}
+
+aside #close, #close1, #close2, #close3, #close4 {}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    display: inline-block;
+    border: 3px solid #f5ef91;
+    border-radius: 4px;
+    box-sizing: border-box;
+    outline: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+}
+
+
+input[type=text]:focus {
+    border: 3px solid #efd272;
+}
+
+input[type=submit] {
+  float: right;
+    width: 49%;
+    background-color: #619d43;
+    color: white;
+    padding: 14px 20px;
+    margin-bottom: 20px;
+    margin-top:5px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: 'Inconsolata', monospace;
+    cursor: pointer;
+}
+
+select {
+    font-size: 16px;
+}
+
+input[type=submit]:hover {
+    background-color: #8bc85f;
+}
+
+input[type=reset] {
+      margin-top:5px;
+  color: #35817f;
+  float: left;
+    width: 49%;
+    background-color: #fff;
+    padding: 14px 20px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: 'Inconsolata', monospace;
+    cursor: pointer;
+}
+
+input[type=reset]:hover {
+    background-color: #ddd;
+}
+
+#submitart {
+    margin-top: 0px;
+    padding-top:20px;
+    padding-left:20px;
+    padding-right:20px;
+    padding-bottom: 72px;
+    border-radius: 5px;
+    background-color: #f5ef91;
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
+}
+
+.button {
+  width: 100%;
+  background-color: #619d43;
+  color: white;
+  padding: 14px 20px;
+  margin-bottom: 0px;
+  margin-top:0px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-family: 'Inconsolata', monospace;
+  cursor: pointer;
+}
+
+.button:hover {
+    background-color: #8bc85f;
+}
+
+img.contact{
+  border: 2px solid #f5ef91;
+  margin-right: 20px;
+}
+
+#eatTip {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  color: #619d43;
+  margin-left:-40px;
+  position:absolute;
+  padding:12px;
+  border-radius:8px;
+  background-color: #fff;
+  opacity:0;
+  transition: all 1s;
+  border: 1px solid #619d43;
+  width: 200px;
+  z-index: 100;
+}
+
+#contactimg {
+    float: left;
+    width: 150px;
+    margin-top:3px;
+    margin-right: 30px;
+    text-align: center;
+
+}
+
+#contactimg a{
+    text-decoration: none;
+    color: #388482;
+  }
+
+iframe{
+  margin:20px;
 }
