--- a/project/final/style.css
+++ b/project/final/style.css
@@ -58,6 +58,14 @@ h2 {
     margin-top: 40px;
 }
 
+h2.home {
+    font-family: 'Inconsolata', monospace;
+    font-size: 30px;
+    margin-left: 0px;
+    float: left;
+    margin-top: 0px;
+}
+
 h3 {
     margin-top: -13px;
     margin-left: 28px;
@@ -82,6 +90,7 @@ h5 {
 h6 {
     margin-top: 0px;
     font-size: 16px;
+    margin-bottom: 20px;
 }
 
 #navbg {
@@ -113,6 +122,14 @@ li {
 }
 
 li a {
+    display: block;
+    color: #35817f;
+    text-align: center;
+    padding: 14px 28px;
+    text-decoration: none;
+}
+
+li a.home {
     display: block;
     color: #35817f;
     text-align: center;
@@ -197,6 +214,12 @@ li.symcheck1 {
     color: #ffffff;
     float: left;
     padding: 14px 160px;
+}
+
+li.symcheck2 {
+    color: #ffffff;
+    float: left;
+    padding: 9px 30px 0px 30px;
 }
 
 .text {
@@ -328,7 +351,7 @@ input[type=reset]:hover {
 }
 
 #submitart {
-    margin-top: 30px;
+    margin-top: 0px;
     padding-top:20px;
     padding-left:20px;
     padding-right:20px;
@@ -338,3 +361,56 @@ input[type=reset]:hover {
     font-family: 'Inconsolata', monospace;
     font-weight: bold;
 }
+
+.button {
+  width: 100%;
+  background-color: #619d43;
+  color: white;
+  padding: 14px 20px;
+  margin-bottom: 0px;
+  margin-top:0px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-family: 'Inconsolata', monospace;
+  cursor: pointer;
+}
+
+.button:hover {
+    background-color: #8bc85f;
+}
+
+img.contact{
+  border: 2px solid #f5ef91;
+  margin-right: 20px;
+}
+
+#eatTip {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  color: #619d43;
+  margin-left:-40px;
+  position:absolute;
+  padding:12px;
+  border-radius:8px;
+  background-color: #fff;
+  opacity:0;
+  transition: all 1s;
+  border: 1px solid #619d43;
+  width: 200px;
+  z-index: 100;
+}
+
+#contactimg {
+    float: left;
+    width: 150px;
+    margin-top:3px;
+    margin-right: 30px;
+    text-align: center;
+
+}
+
+#contactimg a{
+    text-decoration: none;
+    color: #388482;
+  }
