--- a/project/final/issue2/style.css
+++ b/project/final/issue2/style.css
@@ -367,19 +367,22 @@ input[type=reset]:hover {
 .button {
   width: 100%;
   background-color: #619d43;
-  color: white;
   padding: 14px 20px;
   margin-bottom: 0px;
   margin-top:0px;
   border: none;
   border-radius: 4px;
-  font-size: 16px;
-  font-family: 'Inconsolata', monospace;
   cursor: pointer;
 }
 
 .button:hover {
     background-color: #8bc85f;
+}
+
+a.button{
+  color: white;
+  font-size: 16px;
+  font-family: 'Inconsolata', monospace;
 }
 
 img.contact{
