--- a/studio_quiz/style.css
+++ b/studio_quiz/style.css
@@ -126,3 +126,12 @@ border-radius: 20px;
   text-shadow: 2px 2px #7f3819;
   background-color: rgba(181, 78, 33, 0.7);
 }
+p a{
+margin-left:460px;
+  color: #98bf96;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+p a:hover{
+border-bottom: 1px solid #18562e;}
