--- a/studio4/style.css
+++ b/studio4/style.css
@@ -34,6 +34,7 @@ main {
     background: -ms-linear-gradient(top, rgba(167, 253, 252, 1) 0%, rgba(98, 95, 132, 1) 58%, rgba(22, 18, 72, 1) 100%);
     background: linear-gradient(to bottom, rgba(167, 253, 252, 1) 0%, rgba(98, 95, 132, 1) 58%, rgba(22, 18, 72, 1) 100%);
     width: 100%;
+    height: 90%;
 }
 
 #mainContainer {
